--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ererere<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -49,7 +49,6 @@
     </style>
 </head>
 <body class="antialiased">
-
     <canvas id="dotCanvas"></canvas>
 
     <div class="content-container">
@@ -59,7 +58,7 @@
             </h1>
 
             <p class="text-lg text-gray-700 mb-8">
-                Ready to click your way to victory? The editor awaits!
+                Ready to address those notes?
             </p>
 
             <a href="editorclickor/index.html"
