--- a/EditorClickor/index.html
+++ b/EditorClickor/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <audio controls autoplay loop src="website/EditorClickor/images/ClickFrenzy.mp3"></audio>
     <style>
       /* Provides icons using a font */
       @font-face {
