--- a/EditorClickor/index.html
+++ b/EditorClickor/index.html
@@ -248,7 +248,9 @@
                  <button id="complete-reset-button" class="text-xs font-medium py-1 px-3 rounded border border-red-500 bg-red-200 hover:bg-red-300 text-red-800 disabled:opacity-50 disabled:cursor-not-allowed">Complete Reset</button>
                  <p class="text-xs mt-1 text-gray-500 italic">Warning: Deletes ALL progress including Prestige!</p>
             </div>
-    <audio controls autoplay loop src="https://mrnavey.github.io/website/EditorClickor/images/ClickFrenzy.mp3"></audio>
+            <div style="text-align: center;">
+                <audio controls autoplay loop src="https://mrnavey.github.io/website/EditorClickor/images/ClickFrenzy.mp3"></audio>
+            </div>
         </div>
     </div>
 
