--- a/EditorClickor/index.html
+++ b/EditorClickor/index.html
@@ -248,9 +248,10 @@
                  <button id="complete-reset-button" class="text-xs font-medium py-1 px-3 rounded border border-red-500 bg-red-200 hover:bg-red-300 text-red-800 disabled:opacity-50 disabled:cursor-not-allowed">Complete Reset</button>
                  <p class="text-xs mt-1 text-gray-500 italic">Warning: Deletes ALL progress including Prestige!</p>
             </div>
-            <div style="text-align: center;" class="mt-6">  <audio controls autoplay loop src="https://mrnavey.github.io/website/EditorClickor/images/ClickFrenzy.mp3">
-             Your browser does not support the audio element.
-             You can <a href="https://mrnavey.github.io/website/EditorClickor/images/ClickFrenzy.mp3">download the MP3 file here</a>. </audio>
+             <div class="text-center mt-6 w-full"> <audio controls autoplay loop src="https://mrnavey.github.io/website/EditorClickor/images/ClickFrenzy.mp3">
+         Your browser does not support the audio element.
+         You can <a href="https://mrnavey.github.io/website/EditorClickor/images/ClickFrenzy.mp3">download the MP3 file here</a>.
+                </audio>
             </div>
         </div>
     </div>
