Updating the stuff.

--- a/EditorClickor/index.html
+++ b/EditorClickor/index.html
@@ -249,9 +249,9 @@
                  <p class="text-xs mt-1 text-gray-500 italic">Warning: Deletes ALL progress including Prestige!</p>
             </div>
             <div class="text-center mt-6 w-full">
-        <audio id="myAudioPlayer" controls autoplay loop src="https://mrnavey.github.io/website/EditorClickor/images/ClickFrenzy.mp3">
+        <audio id="myAudioPlayer" controls autoplay loop src="/EditorClickor/images/ClickFrenzy.mp3">
              Your browser does not support the audio element.
-             You can <a href="https://mrnavey.github.io/website/EditorClickor/images/ClickFrenzy.mp3">download the MP3 file here</a>.
+             You can <a href="/EditorClickor/images/ClickFrenzy.mp3">download the MP3 file here</a>.
         </audio>
     </div>
 
