--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 Ready to address those notes?
             </p>
 
-            <a href="https://mrnavey.github.io/website/EditorClickor/index.html"
+            <a href="/EditorClickor/index.html"
                 
                class="inline-flex items-center justify-center px-8 py-4 bg-emerald-500 hover:bg-emerald-600 text-white text-xl font-semibold rounded-lg shadow-md hover-pop focus:outline-none focus:ring-2 focus:ring-emerald-400 focus:ring-opacity-75">
                 <img src="https://cdn.jsdelivr.net/npm/lucide-static@latest/icons/mouse-pointer-click.svg" alt="" class="w-6 h-6 mr-3" />
